Add Netlify integration, update author bio, and implement subscription form

--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "start": "netlify dev",
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.3.0",
     "@astrojs/sitemap": "^3.6.0",
+    "@netlify/neon": "^0.1.0",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.4",
+    "resend": "^4.0.0",
     "tailwindcss": "^4.1.17"
   }
 }
